releases/drone/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-drone
  namespace: drone
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
spec:
  redirectScheme:
    scheme: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-system
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
  name: drone-secure
  namespace: drone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`drone.192.168.0.14.xip.io`)
      kind: Rule
      services:
        - name: drone-drone
          port: 80
      middlewares:
        - name: redirect-https-drone
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-system
  labels:
    app.kubernetes.io/name: drone
    app.kubernetes.io/instance: drone
  name: drone
  namespace: drone
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drone.192.168.0.14.xip.io`)
      kind: Rule
      services:
        - name: drone-drone
          port: 80
  tls:
    certResolver: default
    options: {}
